examples/basic-tls.yaml
kind: GatewayClass
apiVersion: networking.x.k8s.io/v1alpha1
metadata:
  name: acme-tls-lb
controller: acme.io/gateway-controller
parameters:
  apiGroup: networking.acme.io
  kind: AcmeLBConfig
  name: acme-tls-lb-config
---
kind: Gateway
apiVersion: networking.x.k8s.io/v1alpha1
metadata:
  name: my-tls-gateway
  namespace: default
spec:
  class: acme-lb
  listeners:  # Use GatewayClass defaults for listener definition.
    - name: my-tls-listener
      type: Combined
      protocol: TCP
  virtualServers:
    - listenerName:  my-tls-listener
      virtualServer:
        group: networking.x.k8s.io
        resource: VirtualServer
        name: my-https-virtualserver
