examples/multiple-https.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: gateway
  namespace: default
spec:
  gatewayClassName: default-class
  addresses:
  - type: NamedAddress
    value: auto-assign
  listeners:
  - hostname:
      name: httpbin.example.com
    port: 443
    protocol: HTTPS
    tls:
      options: {}
      certificateRef:
        kind: Secret
        group: core
        name: httpbin
    routes:
      kind: HTTPRoute
      routeNamespaces:
        from: "All"
      routeSelector:
        matchLabels:
          app: httpbin
  - hostname:
      name: conformance.example.com
    port: 443
    protocol: HTTPS
    tls:
      options: {}
      certificateRef:
        kind: Secret
        group: core
        name: conformance
    routes:
      kind: HTTPRoute
      routeNamespaces:
        from: "All"
      routeSelector:
        matchLabels:
          app: conformance
