examples/multiple-tcp.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: gateway
spec:
  gatewayClassName: default-class
  addresses:
  - type: NamedAddress
    value: auto-assign
  listeners:
  # Forward port 22 to a SSH honeypot app.
  - port: 22
    protocol: TCP
    routes:
      kind: TCPRoute
      selector:
        matchLabels:
          app: sshd-honeypot
      namespaces:
        from: "All"
  # Forward port 2222 to a real SSH server.
  - port: 2222
    protocol: TCP
    routes:
      kind: TCPRoute
      selector:
        matchLabels:
          app: sshd-legitimate
      namespaces:
        from: "All"
  # Forward the SNI named service to the real SSH server ever TLS, assuming
  # that there is an actual client for such a beast.
  - hostname: ssh.example.com
    port: 443
    protocol: TLS
    tls:
      options: {}
      certificateRef:
        name: ssh-server
        kind: Secret
        group: ""
    routes:
      kind: TCPRoute
      selector:
        matchLabels:
          app: sshd-legitimate
      namespaces:
        from: "All"
