examples/wildcard-http.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: gateway
spec:
  gatewayClassName: default-class
  addresses:
  - type: NamedAddress
    value: auto-assign
  listeners:
  - hostname: "*.example.com"
    port: 80
    protocol: HTTP
    routes:
      kind: HTTPRoute
      group: networking.x-k8s.io
      selector:
        matchLabels:
          # This label selects httpbin.example.com and
          # conformance.example.com routes.
          app: httpbin-or-conformance
      namespaces:
        from: "All"
