examples/wildcard-tls-gateway.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: wildcard-tls-gateway
spec:
  gatewayClassName: acme-lb
  listeners:
  - protocol: HTTPS
    port: 443
    hostname: foo.example.com
    tls:
      certificateRef:
        kind: Secret
        group: ""
        name: foo-example-com-cert
      routeOverride:
        certificate: Deny
    routes:
      kind: HTTPRoute
  - protocol: HTTPS
    port: 443
    hostname: "*.example.com"
    tls:
      certificateRef:
        kind: Secret
        group: ""
        name: wildcard-example-com-cert
      routeOverride:
        certificate: Deny
    routes:
      kind: HTTPRoute
