examples/default-match-http.yaml
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: default-match-example
spec:
  controller: acme.io/gateway-controller

---

kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: default-match-gw
spec:
  gatewayClassName: default-match-example
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      group: networking.x-k8s.io
      selector:
        matchLabels:
          app: default-match
      namespaces:
        from: "All"

---

# This HTTPRoute demonstrates patch match defaulting. If no path match is
# specified, CRD defaults adds a default prefix match on the path "/". This
# matches every HTTP request and ensures that route rules always have at
# least one valid match.
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: default-match-route
  labels:
    app: default-match
spec:
  hostnames:
    - default-match.com
  rules:
  - matches:
    - headers:
        type: Exact
        values:
          magic: default-match
    forwardTo:
    - port: 8080
      backendRef:
        name: my-custom-resource
        group: acme.io
        kind: CustomBackend
  - matches:
    - path:
        type: Exact
        value: /example/exact
    forwardTo:
    - serviceName: my-service-2
      port: 8080
