examples/tls-cert-in-route.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: cert-in-route-gateway
spec:
  gatewayClassName: acme-lb
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
  - protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRef:
        kind: Secret
        group: ""
        name: default-cert
      routeOverride:
        certificate: Allow
    routes:
      kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: http-app-1
spec:
  hostnames:
  - "foo.example.com"
  tls:
    certificateRef:
      kind: Secret
      group: ""
      name: foo-example-com-cert
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    forwardTo:
    - serviceName: my-service
      port: 8080
---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: http-app-2
spec:
  hostnames:
  - "bar.example.com"
  tls:
    certificateRef:
      kind: Secret
      group: ""
      name: bar-example-com-cert
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    forwardTo:
    - serviceName: my-service
      port: 8080
